@@ -1,7 +1,7 @@
 /****************************************************************************
  * arch/arm/src/lpc214x/lpc214x_serial.c
  *
- *   Copyright (C) 2007-2009, 2012 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007-2009, 2012-2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -569,6 +569,7 @@ static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
 
   switch (cmd)
     {
+#ifdef CONFIG_SERIAL_TIOCSERGSTRUCT
     case TIOCSERGSTRUCT:
       {
          struct up_dev_s *user = (struct up_dev_s*)arg;
@@ -582,6 +583,7 @@ static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
            }
        }
        break;
+#endif
 
     case TIOCSBRK:  /* BSD compatibility: Turn break on, unconditionally */
       {
