@@ -7,7 +7,7 @@
  *
  * This file is part of the NuttX RTOS and based on the lpc2148 port:
  *
- *   Copyright (C) 2010, 2012 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2010, 2012-2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -692,6 +692,7 @@ static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
 
   switch (cmd)
     {
+#ifdef CONFIG_SERIAL_TIOCSERGSTRUCT
     case TIOCSERGSTRUCT:
       {
         struct up_dev_s *user = (struct up_dev_s *)arg;
@@ -705,6 +706,7 @@ static int up_ioctl(struct file *filep, int cmd, unsigned long arg)
           }
       }
       break;
+#endif
 
     case TIOCSBRK:             /* BSD compatibility: Turn break on,
                                  * unconditionally */
